	PR ld/12277 	* elflink.c (elf_link_output_extsym): Set bfd_error on symbol 	and section errors.  Allow better translation of error messages.